samples/task/valid/R24.dita
<?xml version="1.0" encoding="UTF-8"?>
<task>
  <title>Test Title</title>
  <shortdesc>Short description</shortdesc>
  <prolog/>
  <taskbody>
    <steps><step><cmd/><choices><choice><p>Choice A</p></choice><choice><p>Choice B</p></choice></choices></step></steps>
  </taskbody>
</task>