samples/task/invalid/R19.dita
<?xml version="1.0" encoding="UTF-8"?>
<task>
  <title>Test Title</title>
  <shortdesc>Short description</shortdesc>
  <prolog/>
  <taskbody>
    <steps><step><info><p>Some info</p></info></step></steps>
  </taskbody>
</task>